force-app/main/default/objects/Beneficiaries__x/Beneficiaries__x.object-meta.xml
<CustomObject>
    <description>Beneficiaries</description>
    <externalDataSource>Salesforce_Connect</externalDataSource>
    <externalName>Beneficiaries</externalName>
    <label>Beneficiaries</label>
    <pluralLabel>Beneficiaries</pluralLabel>
</CustomObject>