force-app/main/default/objects/Beneficiaries__x/fields/BeneficiaryAmount__c.field-meta.xml
<CustomField>
    <fullName>BeneficiaryAmount__c</fullName>
    <description>BeneficiaryAmount</description>
    <externalDeveloperName>BeneficiaryAmount</externalDeveloperName>
    <label>BeneficiaryAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>