force-app/main/default/objects/Beneficiaries__x/fields/BeneficiaryPercent__c.field-meta.xml
<CustomField>
    <fullName>BeneficiaryPercent__c</fullName>
    <description>BeneficiaryPercent</description>
    <externalDeveloperName>BeneficiaryPercent</externalDeveloperName>
    <label>BeneficiaryPercent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>