force-app/main/default/objects/Beneficiaries__x/fields/ClaimId__c.field-meta.xml
<CustomField>
    <fullName>ClaimId__c</fullName>
    <description>ClaimId</description>
    <externalDeveloperName>ClaimId</externalDeveloperName>
    <label>ClaimId</label>
    <length>128</length>
    <referenceTo>Claims__x</referenceTo>
    <relationshipLabel>Beneficiaries</relationshipLabel>
    <relationshipName>Beneficiaries</relationshipName>
    <type>ExternalLookup</type>
</CustomField>