force-app/main/default/objects/Beneficiaries__x/fields/ContactIdentifierId__c.field-meta.xml
<CustomField>
    <fullName>ContactIdentifierId__c</fullName>
    <description>ContactIdentifierId</description>
    <externalDeveloperName>ContactIdentifierId</externalDeveloperName>
    <label>ContactIdentifierId</label>
    <length>128</length>
    <referenceTargetField>Contact.Contact_Identifier_Id__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Beneficiaries</relationshipLabel>
    <relationshipName>Beneficiaries</relationshipName>
    <type>IndirectLookup</type>
</CustomField>