force-app/main/default/objects/Beneficiaries__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>BeneficiaryAmount__c</columns>
    <columns>BeneficiaryPercent__c</columns>
    <columns>ClaimId__c</columns>
    <columns>ContactIdentifierId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>